# image-caption-generator

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup.py  test_caption.py
templates/: index.html
