[project]
name = "image-caption-generator"
version = "1.0.0"
description = "A web application that generates image captions using BLIP model"
requires-python = ">=3.9,<3.12"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []